Fix: 토큰을 쿠키에 저장 + RTR 방식 채용으로 인한 로직 변경